--- a/tutoring-service/styles/globals.css
+++ b/tutoring-service/styles/globals.css
@@ -2,15 +2,75 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  line-height: 1.6;
+  font-size: 14px;
 }
 
 * {
   box-sizing: border-box;
 }
+
+h1 {
+  margin-top: 50px;
+}
+
+h2 {
+  text-align: center;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+p {
+  margin-left: 70px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(8, 73, 95);
+}
+
+a:active {
+  color: rgb(8, 73, 95);
+}
+
+
+a:hover {
+  text-decoration: underline;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+.rectangle {
+  border: 1px solid rgb(8, 73, 95);
+  box-sizing: border-box;
+  border-radius: 15px;
+}
+
+button {
+  width: 500px;
+  height: 50px;
+  margin-left: 70px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  background-color: white;
+
+  border: 1px solid rgb(8, 73, 95);
+  box-sizing: border-box;
+  border-radius: 15px;
+}
+
+button:hover {
+  background-color: rgb(8, 73, 95);
+  color: white
+}
+
+
